--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
@@ -20,8 +20,8 @@
   .tippy-box {
     max-width: 400px !important;
     width: 400px !important;
-    border-radius: 12px !important;
-    padding: 8px;
+    border-radius: 14px !important;
+    padding: 8px 4px;
   }
 
   .mix-menu-item {
@@ -32,7 +32,7 @@
   }
 
   .main-menu {
-    margin: 8px;
+    margin: 4px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
