--- a/libs/mix-ui/src/inline-input/inline-input.component.html
+++ b/libs/mix-ui/src/inline-input/inline-input.component.html
@@ -6,7 +6,7 @@
                     tuiAutoFocus
                     (keydown.esc.prevent)="toggleEditTitle()"
                     (keydown.enter.prevent)="toggleEditTitle()">
-    Type db name
+    {{ placeHolder }}
   </tui-input-inline>
 
   <ng-template #text>
