--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -1,41 +1,47 @@
 <div class="data-table-page">
   <div class="data-table-page__main-container">
-    <mix-sub-toolbar [description]="'LISTING'" [title]="'All Database'">
-      <div class="toolbar-separator"></div>
-      <mix-button (click)="createDatabase()" size="s"
-        ><span class="material-symbols-outlined"> add </span>&nbsp; New
-        MixDb</mix-button
-      >
-      <div class="toolbar-separator"></div>
-      <mix-button
-        type="danger"
-        [disabled]="!selectedTable.length"
-        (click)="onDeleteTable()"
-        size="s"
-      >
-        <span class="material-symbols-outlined"> delete </span>&nbsp;
-        Delete(s)</mix-button
-      >
+    <mix-sub-toolbar [description]="'CONTEXT'"
+                     [titleTpl]="titleTpl">
+      <ng-template #titleTpl>
+        <mix-db-context-select [selectedItemId]="selectedDbContextId"
+                               (selectedItemChange)="selectedDbContextId = $event.id"></mix-db-context-select>
+      </ng-template>
 
-      <mix-dynamic-filter class="d-block ms-auto"></mix-dynamic-filter>
+      <div class="toolbar-separator"></div>
+
+      <mix-button (click)="createDatabase()"
+                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
+        MixDb</mix-button>
+
+      <div class="toolbar-separator"></div>
+
+      <mix-button type="danger"
+                  [disabled]="!selectedTable.length"
+                  (click)="onDeleteTable()"
+                  size="s">
+        <span class="material-symbols-outlined"> delete </span>&nbsp; Delete(s)
+      </mix-button>
     </mix-sub-toolbar>
 
-    <div class="data-table-page__body" *ngIf="store.vm$ | async as state">
-      <mix-data-table
-        [contextMenus]="contextMenus"
-        [dataset]="state.data"
-        [loading]="state.status === 'Loading'"
-        [pageInfo]="state.pageInfo"
-        [searchFieldOptions]="store.searchColumns"
-        (itemsSelectedChange)="selectedTable = $event || []"
-        (pageChange)="store.changePage($event)"
-        (searchChange)="
+    <div *ngIf="store.vm$ | async as state"
+         class="data-table-page__body">
+      <mix-data-table [contextMenus]="contextMenus"
+                      [dataset]="state.data"
+                      [loading]="state.status === 'Loading'"
+                      [pageInfo]="state.pageInfo"
+                      [searchFieldOptions]="store.searchColumns"
+                      (itemsSelectedChange)="selectedTable = $event || []"
+                      (pageChange)="store.changePage($event)"
+                      (searchChange)="
           store.search($event.searchText, $any($event.searchField))
-        "
-      >
-        <div [header]="'Name'" key="displayName" mixTableColumn>
-          <ng-template let-data mixColumnCell>
-            <div class="d-flex w-fit" (click)="goDetail(data.id)">
+        ">
+        <div [header]="'Name'"
+             key="displayName"
+             mixTableColumn>
+          <ng-template let-data
+                       mixColumnCell>
+            <div class="d-flex w-fit"
+                 (click)="goDetail(data.id)">
               <div class="text-600 me-2">
                 {{ data.displayName }}
               </div>
@@ -47,32 +53,44 @@
           </ng-template>
         </div>
 
-        <div [header]="'Description'" key="description" mixTableColumn>
-          <ng-template let-data mixColumnCell>
+        <div [header]="'Description'"
+             key="description"
+             mixTableColumn>
+          <ng-template let-data
+                       mixColumnCell>
             <div>
               {{ data.description || 'No description' }}
             </div>
           </ng-template>
         </div>
 
-        <div [header]="'Created'" key="createdDateTime" mixTableColumn>
-          <ng-template let-data mixColumnCell>
+        <div [header]="'Created'"
+             key="createdDateTime"
+             mixTableColumn>
+          <ng-template let-data
+                       mixColumnCell>
             <div>
               {{ data.createdDateTime | date : 'short' | relativeTimeSpan }}
             </div>
           </ng-template>
         </div>
 
-        <div [header]="'Columns'" key="modifiedBy" mixTableColumn>
-          <ng-template let-data mixColumnCell>
+        <div [header]="'Columns'"
+             key="modifiedBy"
+             mixTableColumn>
+          <ng-template let-data
+                       mixColumnCell>
             <div class="mix-db__highlight --orange">
               {{ data.columns.length }} column(s)
             </div>
           </ng-template>
         </div>
 
-        <div [header]="''" key="status" mixTableColumn>
-          <ng-template let-data mixColumnCell>
+        <div [header]="''"
+             key="status"
+             mixTableColumn>
+          <ng-template let-data
+                       mixColumnCell>
             <mix-status-indicator [status]="data.status"></mix-status-indicator>
           </ng-template>
         </div>
