--- a/libs/mix-share/src/modules/task-manage/task-manage.component.html
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.html
@@ -16,7 +16,7 @@
 
     <mix-task-filter></mix-task-filter>
 
-    <div *ngIf="store.vm$ | async as vm"
+    <div *ngIf="store.state$$() as vm"
          class="task-manage__main-view"
          cdkDropListGroup>
       <!-- Header -->
