feat(): add user profile

--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -37,7 +37,7 @@
 
   <div class="main-menu">
     <div class="mix-menu-item"
-         (click)="hide()">
+         (click)="hide(); userProfile()">
       <span class="mix-icon me-3">manage_accounts</span> {{ 'Managed Account' }}
     </div>
 
