--- a/libs/share-styles/src/styles/overwrite-variables.scss
+++ b/libs/share-styles/src/styles/overwrite-variables.scss
@@ -29,10 +29,11 @@
   --tui-font-text-s: normal 0.8125rem/1.25rem var(--tui-font-text);
   --tui-font-text-xs: normal 0.6875rem/1rem var(--tui-font-text);
   // Sizes
-  --tui-radius-xs: 0.25rem;
-  --tui-radius-s: 0.5rem;
-  --tui-radius-m: var(--button-border-radius);
+  --tui-radius-xs: 0.35rem;
+  --tui-radius-s: 0.35rem;
+  --tui-radius-m: 0.35rem;
   --tui-radius-l: 0.825rem;
+
   --tui-height-xs: 1.5rem;
   --tui-height-s: 2rem;
   --tui-height-m: 2.75rem;
