feat(): add user profile

--- a/libs/share-styles/src/styles/variables.scss
+++ b/libs/share-styles/src/styles/variables.scss
@@ -30,7 +30,7 @@ html {
   --border-color-default: #ededed;
   --border-radius-default: 6px;
 
-  --primary-color: var(--blue-500);
+  --primary-color: #505ac9;
   --default-primary-color-hue: 210;
   --success-color: #20c997;
 
