--- a/libs/mix-share/src/components/main-toolbar/main-toolbar.component.scss
+++ b/libs/mix-share/src/components/main-toolbar/main-toolbar.component.scss
@@ -33,6 +33,11 @@
     margin-left: 14px;
   }
 
+  &__custom-portal {
+    margin-left: 14px;
+    margin-bottom: 3px;
+  }
+
   &__culture {
     margin-left: 14px;
   }
