--- a/libs/mix-ui/src/modal/modal.component.scss
+++ b/libs/mix-ui/src/modal/modal.component.scss
@@ -9,27 +9,27 @@ mix-modal {
 .mix-modal {
   display: block;
   min-width: 350px;
-  padding: 1.5rem;
+  max-width: 400px;
   margin: auto;
-  border-radius: 0 0 0.75rem 0.75rem;
   background: var(--tui-base-01);
   box-shadow: inset 0 4px var(--modal-boxshadow);
+  border-radius: 8px;
+  overflow: hidden;
 
-  &__content {
-    margin-top: 1.5rem;
+  &__header {
+    padding: 1rem;
+    background: var(--tui-base-03);
   }
 
-  &__buttons {
+  &__content {
+    padding: 1.5rem;
+  }
+
+  &__footer {
     display: flex;
     justify-content: center;
-    margin: 2rem 0 0;
-
-    button:first-child {
-      margin-right: 4px;
-    }
-
-    button:last-child {
-      margin-left: 4px;
-    }
+    padding: 1rem;
+    gap: 8px;
+    background: var(--tui-base-03);
   }
 }
