feat(): update database context

--- a/apps/mix-cms/src/app/pages/portal/database/components/database-select/database-select.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/components/database-select/database-select.component.html
@@ -1,20 +1,17 @@
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
-<div *ngIf="store.vm$ | async as vm" class="database-select">
-  <mix-button
-    *ngIf="!isCreate"
-    class="database-select__add-btn"
-    [type]="'outline'"
-    (click)="createDb()"
-  >
+<div *ngIf="state() as vm"
+     class="database-select">
+  <mix-button *ngIf="!isCreate"
+              class="database-select__add-btn"
+              [type]="'outline'"
+              (click)="createDb()">
     <span class="mix-icon">add</span>&nbsp; New Table
   </mix-button>
 
-  <mix-input
-    class="database-select__search"
-    [formControl]="searchText"
-    [placeHolder]="'Type db name'"
-    [searchIcon]="true"
-  ></mix-input>
+  <mix-input class="database-select__search"
+             [formControl]="searchText"
+             [placeHolder]="'Type db name'"
+             [searchIcon]="true"></mix-input>
 
   <div class="database-select__title">
     {{ prefix }} Tables ({{ vm.data.length || '0' }})
@@ -26,13 +23,11 @@
     </ng-container>
     <ng-container *ngIf="vm.status === 'Success'">
       <ng-container *ngFor="let table of searchText.value | filter : vm.data">
-        <div
-          class="database-select__item"
-          [class.--active]="
+        <div class="database-select__item"
+             [class.--active]="
             selectedItemId == table.id || selectedItemName == table.systemName
           "
-          (click)="selectDb(table)"
-        >
+             (click)="selectDb(table)">
           <span>{{ table.displayName }}</span>
         </div>
       </ng-container>
