--- a/apps/mix-cms/src/app/pages/portal/database/components/db-context-select/db-context-select.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/components/db-context-select/db-context-select.component.html
@@ -3,7 +3,7 @@
      [tpOffset]="[-10, 5]"
      tpVariation="popper"
      tpPlacement="bottom-start">
-  <div class="text-xl text-600">
+  <div class="{{ getLabelSize(size) }} text-600">
     {{
       getSelected(contexts(), selectedItemId)?.displayName || 'Choose context'
     }}
