feat(): dark mode

--- a/libs/mix-share/src/components/main-toolbar/main-toolbar.component.html
+++ b/libs/mix-share/src/components/main-toolbar/main-toolbar.component.html
@@ -1,8 +1,8 @@
 <div class="main-toolbar">
   <div class="main-toolbar__logo">
-    <img class="w-100"
+    <!-- <img class="w-100"
          src="assets/images/mixcore-logo.svg"
-         alt="logo">
+         alt="logo"> -->
   </div>
 
   <mix-location-controller></mix-location-controller>
