--- a/libs/share-styles/src/styles/dialog.scss
+++ b/libs/share-styles/src/styles/dialog.scss
@@ -67,6 +67,7 @@ ngneat-dialog {
 
 .ngneat-dialog-content {
   padding: 0px !important;
+  background: var(--background-color-primary);
 }
 
 .mix-dialog.--default-padding {
