--- a/apps/mix-cms/src/app/pages/portal/user/components/create-user-dialog/create-user-dialog.component.html
+++ b/apps/mix-cms/src/app/pages/portal/user/components/create-user-dialog/create-user-dialog.component.html
@@ -1,37 +1,42 @@
-<div [formGroup]="registerForm">
-  <span class="text-xl text-bold">Create User Form</span>
+<div class="mix-dialog --default-padding"
+     [formGroup]="registerForm">
+  <div class="mix-dialog__header">
+    <span>Create User Form</span>
+  </div>
 
-  <label class="content-label mt-4">User name - Email</label>
-  <mix-input formControlName="username"
-             placeHolder="Type email for login"></mix-input>
-  <mix-form-error formControlName="username"></mix-form-error>
+  <div class="mix-dialog__content">
+    <label class="content-label mt-4">User name - Email</label>
+    <mix-input formControlName="username"
+               placeHolder="Type email for login"></mix-input>
+    <mix-form-error formControlName="username"></mix-form-error>
 
-  <label class="content-label mt-2">Password:</label>
-  <mix-input type="password"
-             formControlName="password"
-             placeHolder="Type password"></mix-input>
-  <mix-form-error formControlName="password"></mix-form-error>
+    <label class="content-label mt-2">Password:</label>
+    <mix-input type="password"
+               formControlName="password"
+               placeHolder="Type password"></mix-input>
+    <mix-form-error formControlName="password"></mix-form-error>
 
-  <label class="content-label mt-2">Confirm Password:</label>
-  <mix-input type="password"
-             formControlName="confirmPassword"
-             placeHolder="Confirm password"></mix-input>
-  <mix-form-error formControlName="confirmPassword"></mix-form-error>
+    <label class="content-label mt-2">Confirm Password:</label>
+    <mix-input type="password"
+               formControlName="confirmPassword"
+               placeHolder="Confirm password"></mix-input>
+    <mix-form-error formControlName="confirmPassword"></mix-form-error>
 
-  <label class="content-label mt-2">First name</label>
-  <mix-input formControlName="firstName"
-             placeHolder="Type first name"></mix-input>
-  <mix-form-error formControlName="firstName"></mix-form-error>
+    <label class="content-label mt-2">First name</label>
+    <mix-input formControlName="firstName"
+               placeHolder="Type first name"></mix-input>
+    <mix-form-error formControlName="firstName"></mix-form-error>
 
-  <label class="content-label mt-2">Last name</label>
-  <mix-input formControlName="lastName"
-             placeHolder="Type last name"></mix-input>
-  <mix-form-error formControlName="lastName"></mix-form-error>
+    <label class="content-label mt-2">Last name</label>
+    <mix-input formControlName="lastName"
+               placeHolder="Type last name"></mix-input>
+    <mix-form-error formControlName="lastName"></mix-form-error>
 
-  <mix-error-alert class="mt-3"
-                   [error]="serverError()"></mix-error-alert>
+    <mix-error-alert class="mt-3"
+                     [error]="serverError()"></mix-error-alert>
+  </div>
 
-  <div class="d-flex justify-content-end mt-3 gap-2">
+  <div class="mix-dialog__footer">
     <mix-button type="outline"
                 [loading]="loadingState() === 'Loading'"
                 (click)="dialogRef.close()">Cancel</mix-button>
