--- a/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.html
@@ -1,19 +1,23 @@
-<div class="w-100 task-parent-card text-m" [class.--open]="open">
-  <mix-button [size]="'xs'" [type]="'icon'" (click)="expandClick.emit()"
-    ><span class="mix-icon expand-icon text-xxl">expand_more</span>
+<div class="w-100 task-parent-card text-m"
+     [class.--open]="open">
+  <mix-button [size]="'xs'"
+              [type]="'icon'"
+              (click)="expandClick.emit()"><span class="mix-icon expand-icon text-xxl">expand_more</span>
   </mix-button>
 
-  <mix-user-avatar
-    *ngIf="userInfo() as info"
-    [userInfo]="info"
-    size="xs"
-  ></mix-user-avatar>
+  <mix-user-avatar *ngIf="userInfo() as info"
+                   [userInfo]="info"
+                   size="xs"></mix-user-avatar>
 
-  <span class="task-parent-card__title">
+  <span class="task-parent-card__title"
+        (click)="editTask()">
     {{ task.title }}
   </span>
 
-  <mix-button class="ms-2" [size]="'xs'" [iconBtn]="true" (click)="addTask()">
+  <mix-button class="ms-2"
+              [iconBtn]="true"
+              [size]="'xs'"
+              (click)="addTask()">
     <span class="mix-icon text-xxl">add</span>
   </mix-button>
 </div>
