--- a/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
@@ -17,6 +17,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: var(--text-size-s);
+    cursor: pointer;
   }
 
   &.--open {
