--- a/libs/share-styles/src/styles/variables.scss
+++ b/libs/share-styles/src/styles/variables.scss
@@ -33,6 +33,7 @@ html {
   --primary-color: #505ac9;
   --default-primary-color-hue: 210;
   --success-color: #20c997;
+  --success-color-text: #fff;
 
   --link-color: rgba(27, 31, 59, 0.65);
   --text-color-primary: #212121;
