--- a/libs/mix-share/src/modules/task-manage/components/start-end-date/start-end-date.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/start-end-date/start-end-date.component.html
@@ -9,7 +9,8 @@
   <span>Date</span>
 </div>
 
-<ng-template #dateSelect>
+<ng-template #dateSelect
+             let-hide>
   <div>
     <div class="d-flex gap-1">
       <tui-calendar [(hoveredItem)]="hoveredItem"
@@ -31,8 +32,10 @@
 
     <div class="w-100 d-flex gap-1 ps-2 pe-2 mt-3">
       <mix-button class="w-100"
-                  type="outline">Remove</mix-button>
-      <mix-button class="w-100">Save</mix-button>
+                  type="outline"
+                  (click)="hide()">Cancel</mix-button>
+      <mix-button class="w-100"
+                  (click)="onSave(); hide()">Save</mix-button>
     </div>
   </div>
 </ng-template>
