--- a/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
@@ -35,7 +35,7 @@
           <div class="text-s text-sub label">Status:</div>
           <mix-select class="item"
                       [items]="statusItems"
-                      [labelProcess]="statussLabel"
+                      [labelProcess]="statusLabel"
                       [size]="'s'"
                       formControlName="taskStatus"></mix-select>
         </div>
@@ -90,7 +90,8 @@
       <div class="col-12 col-md-4">
         <div class="mb-1 text-500 text-s text-sub label">Add to task</div>
         <div class="d-flex flex-wrap gap-2">
-          <start-end-date [task]="task"></start-end-date>
+          <start-end-date [task]="task"
+                          (taskDateChange)="onDateChange($event)"></start-end-date>
         </div>
       </div>
     </div>
