--- a/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.html
@@ -1,3 +1,9 @@
 <div class="task-date-display">
-  {{ task.fromDate | date: 'hh:MM:yyyy' }}
+  <span class="mix-icon me-1">schedule</span>
+  <span>
+    {{ task.fromDate | date : 'dd MMM yyyy' }}
+  </span>
+  <span *ngIf="task.dueDate">
+    &nbsp;- {{ task.dueDate | date : 'dd MMM yyyy' }}
+  </span>
 </div>
