--- a/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-date-display/task-date-display.component.scss
@@ -1,6 +1,11 @@
 .task-date-display {
   background-color: var(--success-color);
   color: var(--success-color-text);
-  padding: 4px;
+  padding: 4px 6px;
   width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  border-radius: 2px;
+  line-height: 1;
 }
