--- a/apps/mix-cms/src/app/pages/portal/post/post.component.html
+++ b/apps/mix-cms/src/app/pages/portal/post/post.component.html
@@ -145,7 +145,7 @@
                        mixColumnCell>
             <div class="d-flex align-items-center">
               <img alt="preview"
-                   [src]="data.image | mixImg: 'XS'"
+                   [src]="data.image | mixImg : 'XS'"
                    style="object-fit: cover; height: 40px"
                    width="60"
                    height="30">
@@ -159,11 +159,13 @@
           <ng-template let-data
                        mixColumnCell>
             <div class="text-500">
-              {{ data.createdDateTime | mixDate | date: 'dd/MM/yyyy, hh:mm a' }}
+              {{
+                data.createdDateTime | mixDate | date : 'dd/MM/yyyy, hh:mm a'
+              }}
             </div>
 
             <div class="text-sub text-s">
-              {{ data.createdDateTime | mixDate | relativeTime | titlecase }}
+              {{ data.createdDateTime | mixDate | relativeTime }}
             </div>
           </ng-template>
         </div>
