--- a/libs/mix-share/src/modules/task-manage/project/project.component.html
+++ b/libs/mix-share/src/modules/task-manage/project/project.component.html
@@ -1,1 +1,7 @@
-<p>project works!</p>
+<div class="data-table-page ">
+  <div class="data-table-page__main-container">
+    <mix-sub-toolbar [description]="'Setting'"
+                     [title]="'Your Project'">
+    </mix-sub-toolbar>
+  </div>
+</div>
