--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -4,7 +4,7 @@
   position: relative;
   --wallpaper-height: 300px;
   background-color: var(--background-color-primary);
-  border: 1px solid var(--border-color-default);
+  // border: 1px solid var(--border-color-default);
   overflow: hidden;
 
   fieldset {
