--- a/libs/share-styles/src/styles/shares/page-list.scss
+++ b/libs/share-styles/src/styles/shares/page-list.scss
@@ -81,8 +81,6 @@
     display: flex;
     flex-direction: column;
     background-color: var(--background-color-primary);
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
     border: 1px solid var(--tui-base-04);
     overflow: hidden;
     flex-grow: 1;
@@ -93,7 +91,7 @@
   &__detail-container {
     background-color: var(--background-color-primary);
     border-radius: var(--border-radius-default);
-    border: 1px solid var(--border-color-default);
+    // border: 1px solid var(--border-color-default);
     overflow: hidden;
     margin-left: 8px;
     width: 70vw;
