feat(): update max kb

--- a/libs/mix-share/src/components/sub-toolbar/sub-toolbar.component.scss
+++ b/libs/mix-share/src/components/sub-toolbar/sub-toolbar.component.scss
@@ -6,11 +6,10 @@
 
 .sub-toolbar {
   width: 100%;
-  border-bottom: 1px solid var(--border-color-default);
   background-color: var(--background-color-primary);
   padding: var(--container-padding);
-  padding-top: var(--main-layout-gap);
-  padding-bottom: var(--main-layout-gap);
+  padding-top: 14px;
+  padding-bottom: unset;
   align-items: center;
   display: flex;
 
