--- a/libs/share-styles/src/styles/shares/page-list.scss
+++ b/libs/share-styles/src/styles/shares/page-list.scss
@@ -81,6 +81,8 @@
     display: flex;
     flex-direction: column;
     background-color: var(--background-color-primary);
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
     border: 1px solid var(--tui-base-04);
     overflow: hidden;
     flex-grow: 1;
@@ -91,7 +93,6 @@
   &__detail-container {
     background-color: var(--background-color-primary);
     border-radius: var(--border-radius-default);
-    // border: 1px solid var(--border-color-default);
     overflow: hidden;
     margin-left: 8px;
     width: 70vw;
