--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -4,7 +4,6 @@
   position: relative;
   --wallpaper-height: 300px;
   background-color: var(--background-color-primary);
-  // border: 1px solid var(--border-color-default);
   overflow: hidden;
 
   fieldset {
@@ -105,7 +104,9 @@
     height: 100%;
     box-shadow: 0px 4px 22px 0px #00000033;
     border: 1px solid var(--tui-base-04);
-    // overflow: hidden;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    overflow: hidden;
   }
 
   &__content {
