feat(): update layout app

--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -1,5 +1,6 @@
 <div class="user-navigation hoverable"
      [tp]="userMenuTpl"
+     [tpOffset]="[0, -5]"
      tpClassName="user-navigation-popup"
      tpPlacement="bottom-end"
      tpVariation="popper">
