--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
@@ -33,6 +33,7 @@
 
   .main-menu {
     margin: 4px;
+    margin-top: 12px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
