feat(): cheat animate

--- a/libs/mix-ui/src/data-table/data-table.component.html
+++ b/libs/mix-ui/src/data-table/data-table.component.html
@@ -35,6 +35,7 @@
                 [showLoader]="(loading && !dataset.length) || forceLoading">
       <table *ngIf="displayColumns.length > 1"
              [columns]="tableColumns"
+             [@fadeInRightOnEnter]
              tuiTable>
         <thead>
           <tr tuiThGroup>
